--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ img {
 
 .header-container {
   display: flex;
+  align-items: center;
 }
 .header-navigation {
   display: flex;
@@ -103,6 +104,7 @@ img {
 }
 
 .header-menu-link {
+  display: block;
   color: var(--navyblue, #2e2f42);
   font-family: "Roboto";
   font-size: 16px;
@@ -123,6 +125,7 @@ img {
 }
 
 .header-address {
+  margin-left: auto;
   font-style: normal;
 }
 .header-address-link {
@@ -156,9 +159,12 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 .hero-button {
+  margin: 0 auto;
   background: var(--accent-cl);
   color: var(--white, #fff);
   font-family: inherit;
@@ -246,7 +252,7 @@ img {
   gap: 24px;
 }
 
-.products-item :first-child {
+.products-item {
   width: calc((100% - 48px) / 3);
 }
 
@@ -272,13 +278,11 @@ img {
   display: flex;
   gap: 24px;
 }
-.team-list :first-child {
-  width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
-}
 
 .team-item {
   background: var(--white, #fff);
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-item-first {
@@ -334,6 +338,7 @@ img {
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em; /* 0.32px/16 */
+  max-width: 264px;
 }
 
 /*-----------PORTFOLIO-------------------- */
