--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,8 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -122,6 +124,10 @@ img {
 .header-menu-list {
   display: flex;
   gap: 40px;
+}
+
+.header-menu-item {
+  position: relative;
 }
 
 .header-address {
