--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ img {
   padding-bottom: 24px;
   position: relative;
   color: var(--ocean-cl);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -127,10 +128,6 @@ img {
   display: flex;
   gap: 40px;
 }
-
-/* .header-menu-item {
-  position: relative;
-} */
 
 .header-address {
   margin-left: auto;
@@ -154,6 +151,11 @@ img {
   display: flex;
   gap: 40px;
 }
+
+.header-address-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .hero {
   background-color: var(--navyblue, #2e2f42);
   padding: 188px 0 188px;
