--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ img {
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em; /* 0.32px/16 */
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
@@ -152,9 +153,8 @@ img {
   gap: 40px;
 }
 
-.header-address-item {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+/* .header-address-item {
+} */
 
 .hero {
   background-color: var(--navyblue, #2e2f42);
