--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,10 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-menu-link: ::after {
+  content: "";
+}
+
 .header-menu-link:hover,
 .header-menu-link:focus {
   color: var(--ocean, #404bbf);
