--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-link: ::after {
+.header-menu-link::after {
   content: "";
 }
 
