--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,12 @@ img {
 
 .header-menu-link::after {
   content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .header-menu-link:hover,
