--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,15 @@ img {
 .hero {
   background-color: var(--navyblue, #2e2f42);
   padding: 188px 0 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
