--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -340,7 +341,53 @@ img {
   text-align: center;
 }
 
-/* ----footer------- */
+/*#################### SECTION 5 #################*/
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.customers-title {
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--navy-blue-cl);
+  margin-bottom: 72px;
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+}
+
+.customers-item {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+
+.customers-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--light-slate-cl);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
+.customers-icons {
+  flex-shrink: 0;
+  fill: currentColor;
+}
+
+/* ##################--FOOTER--################### */
 
 .footer {
   background: var(--navyblue, #2e2f42);
