--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,8 @@ img {
   align-items: center;
   justify-content: center;
   color: var(--light-slate-cl);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
