--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,10 @@ img {
   line-height: 1.11;
   color: var(--navy-blue-cl);
   margin-bottom: 72px;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 0, 02em; /* 0.72px/36 */
+  text-transform: capitalize;
 }
 
 .customers-list {
@@ -395,6 +399,8 @@ img {
   background: var(--navyblue, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
+  display: flex;
+  align-items: baseline;
 }
 .footer-logo {
   color: var(--accent-cl);
