--- a/css/style.css
+++ b/css/style.css
@@ -399,9 +399,13 @@ img {
   background: var(--navyblue, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.footer-container {
   display: flex;
   align-items: baseline;
 }
+
 .footer-logo {
   color: var(--accent-cl);
   font-family: "Raleway", sans-serif;
