--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,10 @@ img {
   align-items: baseline;
 }
 
+.footer-logo-paragraf {
+  margin-right: 120px;
+}
+
 .footer-logo {
   color: var(--accent-cl);
   font-family: "Raleway", sans-serif;
@@ -428,6 +432,44 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em; /* 0.32px/16 */
   max-width: 264px;
+}
+
+.footer-text-2 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white-cl);
+  margin-bottom: 16px;
+}
+
+.footer-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-cl);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-icons {
+  fill: var(--cloud-cl);
 }
 
 /*-----------PORTFOLIO-------------------- */
