--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ img {
   max-width: 264px;
 }
 
-.footer-text-2 {
+.footer-text-underlogo {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -461,6 +461,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -472,7 +473,7 @@ img {
   fill: var(--cloud-cl);
 }
 
-/*-----------PORTFOLIO-------------------- */
+/*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
   display: flex;
