--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,7 @@ img {
 .team-icons-item {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-link {
   height: 100%;
@@ -600,6 +601,15 @@ img {
 /* .structure-link {
   text-decoration: none;
 } */
+
+.portfolio-footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.portfolio-logo-paragraf {
+  margin-right: 120px;
+}
 
 /* ++++++++++++++++++++++++++ */
 /* components styles */
