--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,7 @@ img {
 
 .container-portfolio {
   display: flex;
+  align-items: center;
 }
 
 .portfolio-main {
@@ -529,6 +530,13 @@ img {
   justify-content: center;
   gap: 24px;
   margin-bottom: 72px;
+}
+
+.menu-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-button {
@@ -562,6 +570,8 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.04em; /* 0.64px/16 */
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* ------Structure---------- */
@@ -572,7 +582,7 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
-.structure-item :first-child {
+.structure-item {
   width: calc((100% - 48px) / 3);
 }
 
@@ -598,9 +608,36 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em; /* 0.32px/16 */
 }
-/* .structure-link {
-  text-decoration: none;
-} */
+.structure-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.structure-link:hover,
+.structure-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
+
+.structure-picture-section {
+  position: relative;
+  overflow: hidden;
+}
+
+.structure-picture-subscribe {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud-cl);
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .portfolio-footer {
   display: flex;
