--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,10 @@ img {
   padding-right: 24px;
   border: 1px solid var(--button-cl);
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-button:hover,
