--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,12 @@ img {
 .structure-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.structure-link:hover .structure-picture-subscribe {
+  transform: translateY(0%);
+}
+.structure-link:focus .structure-picture-subscribe {
   transform: translateY(0%);
 }
 
