--- a/css/style.css
+++ b/css/style.css
@@ -568,11 +568,13 @@ img {
 .modal-btn-close:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 /*####################--PORTFOLIO--####################### */
 
 .container-portfolio {
