--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,9 @@ img {
 
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button-icon:hover,
+..modal-button-icon:focus {
   fill: #ffffff;
 }
 
