--- a/css/style.css
+++ b/css/style.css
@@ -564,17 +564,13 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn-close:hover,
-.modal-btn-close:focus {
-  background-color: #404bbf;
-  border: none;
-}
-
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button-icon:hover,
-..modal-button-icon:focus {
+.modal-button-icon:focus {
+  background-color: #404bbf;
+  border: none;
   fill: #ffffff;
 }
 
