--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,11 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-btn-close:hover,
+:focus .modal-button-icon {
+  fill: #ffffff;
+}
+
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -571,7 +576,6 @@ img {
 .modal-button-icon:focus {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
 }
 
 /*####################--PORTFOLIO--####################### */
