--- a/css/style.css
+++ b/css/style.css
@@ -564,19 +564,21 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn-close:hover,
-:focus .modal-button-icon {
+.modal-btn-close:hover .modal-button-icon {
+  fill: #ffffff;
+}
+.modal-btn-close:focus .modal-button-icon {
   fill: #ffffff;
 }
 
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button-icon:hover,
+/* .modal-button-icon:hover,
 .modal-button-icon:focus {
   background-color: #404bbf;
   border: none;
-}
+} */
 
 /*####################--PORTFOLIO--####################### */
 
