--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-btn-close:hover,
+.modal-btn-close:focus {
+  background-color: var(--ocean-cl);
+  border: none;
+}
 
 .modal-btn-close:hover .modal-button-icon {
   fill: var(--white-cl);
@@ -574,11 +579,6 @@ img {
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .modal-button-icon:hover,
-.modal-button-icon:focus {
-  background-color: #404bbf;
-  border: none;
-} */
 
 /*####################--PORTFOLIO--####################### */
 
