--- a/css/style.css
+++ b/css/style.css
@@ -563,8 +563,13 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-btn-close:hover,
-.modal-btn-close:focus {
+
+.modal-btn-close:hover .modal-button-icon {
+  background-color: var(--ocean-cl);
+  border: none;
+}
+
+.modal-btn-close:focus .modal-button-icon {
   background-color: var(--ocean-cl);
   border: none;
 }
