--- a/css/style.css
+++ b/css/style.css
@@ -564,22 +564,22 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button-icon {
+.modal-button-icon:hover {
   background-color: var(--ocean-cl);
   border: none;
 }
 
-.modal-button-icon {
+.modal-button-icon: :focus {
   background-color: var(--ocean-cl);
   border: none;
 }
 
-.modal-btn-close:hover .modal-button-icon {
+/* .modal-btn-close:hover .modal-button-icon {
   fill: var(--white-cl);
 }
 .modal-btn-close:focus .modal-button-icon {
   fill: var(--white-cl);
-}
+} */
 
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
