--- a/css/style.css
+++ b/css/style.css
@@ -564,12 +564,12 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button-icon:hover {
+.modal-button-close:hover {
   background-color: var(--ocean-cl);
   border: none;
 }
 
-.modal-button-icon: :focus {
+.modal-button-close:focus {
   background-color: var(--ocean-cl);
   border: none;
 }
