--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,10 @@ img {
 }
 
 .container {
-  width: 100%;
-  max-width: 1158px;
+  width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid red;
 }
 
 /* -------------------------- */
@@ -116,11 +114,13 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
   position: relative;
-  color: var(--ocean-cl);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-link::after {
+.after-link {
+  color: var(--ocean-cl);
+}
+.after-link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -128,6 +128,7 @@ img {
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
+  width: 100%;
 }
 
 .header-menu-link:hover,
@@ -564,22 +565,23 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button-close:hover {
+.modal-btn-close:hover {
   background-color: var(--ocean-cl);
   border: none;
+  fill: var(--white-cl);
 }
-
-.modal-button-close:focus {
+.modal-btn-close:focus {
   background-color: var(--ocean-cl);
   border: none;
+  fill: var(--white-cl);
 }
 
-/* .modal-btn-close:hover .modal-button-icon {
+.modal-btn-close:hover .modal-button-icon {
   fill: var(--white-cl);
 }
 .modal-btn-close:focus .modal-button-icon {
   fill: var(--white-cl);
-} */
+}
 
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
